<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/FragmentMenu">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="#AA000000"
            android:id="@+id/dp_box">

            <ImageView
                style="@style/MenuItemsImage"
                android:id="@+id/protanopia"
                app:srcCompat="@drawable/dalton_p"
                android:contentDescription="@string/daltonize_protanope_alt" />

            <TextView
                style="@style/MenuItemsText"
                android:layout_below="@id/protanopia"
                android:text="@string/daltonize_label_protanope" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="#AA000000"
            android:id="@+id/dd_box">

            <ImageView
                style="@style/MenuItemsImage"
                android:id="@+id/deuteranopia"
                app:srcCompat="@drawable/dalton_d"
                android:contentDescription="@string/daltonize_deuteranope_alt" />

            <TextView
                style="@style/MenuItemsText"
                android:layout_below="@id/deuteranopia"
                android:text="@string/daltonize_label_deuteranope" />

        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#AA000000"
            android:layout_marginEnd="15dp"
            android:id="@+id/dt_box">

            <ImageView
                style="@style/MenuItemsImage"
                android:id="@+id/tritanopia"
                app:srcCompat="@drawable/dalton_t"
                android:contentDescription="@string/daltonize_tritanope_alt" />

            <TextView
                style="@style/MenuItemsText"
                android:text="@string/daltonize_label_tritanope"
                android:layout_below="@id/tritanopia" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginStart="15dp">

        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/daltonize_menu_explanation"
            android:textSize="15sp"/>

    </LinearLayout>

</LinearLayout>