<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TITOLO E SOTTOTITOLO -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <!-- Titolo (nome del daltonismo) -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_protanopia_title"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:id="@+id/description_title"
            android:layout_centerHorizontal="true"/>

        <!-- Sottotitolo (tipologia di cecità) -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/description_subtitle"
            android:text="@string/info_protanopia_subtitle"
            android:layout_below="@id/description_title"
            android:layout_centerHorizontal="true"
            android:textSize="17sp"
            />

    </RelativeLayout>


    <!-- Spiegazione della tipologia di daltonismo -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description_text"
        android:text="@string/info_protanopia_text"
        android:padding="20dp"
        android:textSize="15sp"/>

</LinearLayout>