<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_container">

    <!-- View che visualizza le immagini -->
    <TextureView
        android:id="@+id/textureview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true" />

    <!-- Pulsantiera superiore -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/linearLayout">

        <!-- Settings -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageButton
                android:id="@+id/settings"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="#00000000"
                android:scaleType="centerCrop"
                android:tint="#00000000"
                app:srcCompat="@drawable/ic_settings" />
        </LinearLayout>

        <!-- Nome del filtro -->
        <TextView
            style="@style/LabelStyle"
            android:id="@+id/filterType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/normal_filter_type_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Info -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageButton
                android:id="@+id/info"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="#00000000"
                android:scaleType="centerCrop"
                android:tint="#00000000"
                app:srcCompat="@drawable/ic_info" />
        </LinearLayout>
    </LinearLayout>

    <!-- Pulsantiera inferiore -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <!-- Filtri -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight=".40"
            android:layout_height="wrap_content"
            android:gravity="center">


            <ImageButton
                android:id="@+id/filters"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:background="#00000000"
                android:backgroundTint="#00000000"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_filters"
                android:layout_marginBottom="5dp"/>

            <!-- Etichetta del pulsante dei filtri -->
            <TextView
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filters_button_label"
                android:layout_below="@id/filters"
                android:textColor="#FFFFFF"
                android:layout_centerHorizontal="true"
                />

        </RelativeLayout>


        <!-- Pulsante per scattare la foto -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".20"
            android:gravity="center">

            <ImageButton
                android:id="@+id/aperture"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginBottom="10dp"
                android:background="#00000000"
                android:scaleType="centerCrop"
                android:tint="#00000000"
                app:srcCompat="@drawable/ic_photo" />
        </RelativeLayout>


        <!-- Daltonizzazione -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight=".40">

            <ImageButton
                android:id="@+id/daltonize"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="false"
                android:background="#00000000"
                android:backgroundTint="#00000000"
                android:cropToPadding="false"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_daltonize2" />

            <!-- Etichetta del pulsante per la daltonizzazione -->
            <TextView
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daltonize_button_label"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/daltonize"
                android:textColor="#FFFFFF"
                android:layout_centerHorizontal="true"
                />

        </RelativeLayout>


    </LinearLayout>




</RelativeLayout>

